--- a/post.html
+++ b/post.html
@@ -23,13 +23,30 @@
       <h1 class="site-title">サイトタイトル</h1>
       <nav class="navigation">
         <ul>
-          <li><a href="home.html" id="homeLink">ホーム</a></li>
-          <li><a href="post.html" id="postLink">投稿</a></li>
-          <li><a href="ranking.html" id="rankingLink">ランキング</a></li>
-          <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
+          <!-- アイコン表示 -->
+          <li>
+            <a href="home.html" id="homeLink">
+              <img src="img/icon_home.png" alt="Home Icon" class="nav-icon" />
+            </a>
+          </li>
+          <li>
+            <a href="post.html" id="postLink">
+              <img src="img/icon_post.png" alt="Post Icon" class="nav-icon" />
+            </a>
+          </li>
+          <li>
+            <a href="ranking.html" id="rankingLink">
+              <img src="img/icon_ranking.png" alt="Ranking Icon" class="nav-icon" />
+            </a>
+          </li>
+          <li>
+            <a href="mypage.html" id="mypageLink">
+              <img src="img/icon_mypage.png" alt="My Page Icon" class="nav-icon" />
+            </a>
+          </li>
         </ul>
       </nav>
-      <!-- 言語切替セレクター (任意) -->
+      <!-- 言語切替セレクター -->
       <select id="headerLanguageSelect">
         <option value="ja">日本語</option>
         <option value="en">English</option>
@@ -40,13 +57,13 @@
   <!-- メイン -->
   <main class="site-main">
     <section class="post-section container">
-      <h2 class="page-title">レビュー投稿</h2>
+      <h2 class="page-title" id="reviewPostTitle">レビュー投稿</h2>
 
-      <!-- ▼ 1) エリア → 地域 → 詳細エリアの選択 -->
+      <!-- ▼ エリア → 地域 → 詳細エリア選択 -->
       <div id="postAreaContainer">
         <!-- エリア選択 -->
-        <div class="dropdown-row">
-          <label for="postAreaSelect">エリアを選択:</label>
+        <div class="dropdown-row" id="areaSelectContainer">
+          <label for="postAreaSelect" id="postAreaLabel">エリアを選択:</label>
           <select id="postAreaSelect">
             <option value="" disabled selected>選択してください</option>
             <option value="tokyo">東京</option>
@@ -59,7 +76,7 @@
 
         <!-- 地域選択 -->
         <div class="dropdown-row" id="postRegionContainer" style="display:none;">
-          <label for="postRegionSelect">地域を選択:</label>
+          <label for="postRegionSelect" id="postRegionLabel">地域を選択:</label>
           <select id="postRegionSelect">
             <option value="" disabled selected>選択してください</option>
           </select>
@@ -67,19 +84,18 @@
 
         <!-- 詳細エリア選択 -->
         <div class="dropdown-row" id="postSubRegionContainer" style="display:none;">
-          <label for="postSubRegionSelect">詳細エリアを選択:</label>
+          <label for="postSubRegionSelect" id="postSubRegionLabel">詳細エリアを選択:</label>
           <select id="postSubRegionSelect">
             <option value="" disabled selected>選択してください</option>
           </select>
         </div>
       </div>
 
-      <!-- ▼ 2) 店舗情報フォーム -->
+      <!-- ▼ 店舗情報フォーム -->
       <form id="postReviewForm" class="review-form" style="margin-top:30px;">
-        <!-- Google Placesオートコンプリート: 店舗名検索 -->
+        <!-- Google Placesオートコンプリート: 店舗名 -->
         <div class="form-group">
-          <label for="storeNameInput">店舗名 (オートコンプリート) <span class="required">*</span></label>
-          <!-- ユーザーが入力 → オートコンプリート表示 -->
+          <label for="storeNameInput" id="storeNameLabel">店舗名 (オートコンプリート) <span class="required">*</span></label>
           <input
             type="text"
             id="storeNameInput"
@@ -87,15 +103,13 @@
             required
           />
         </div>
-
-        <!-- 自動設定される Hidden Fields: place_id, lat, lng -->
         <input type="hidden" id="googlePlaceId" />
         <input type="hidden" id="storeLat" />
         <input type="hidden" id="storeLng" />
 
         <!-- 住所 (編集可能) -->
         <div class="form-group">
-          <label for="addressInput">住所 (編集可) <span class="required">*</span></label>
+          <label for="addressInput" id="addressLabel">住所 (編集可) <span class="required">*</span></label>
           <input
             type="text"
             id="addressInput"
@@ -106,7 +120,7 @@
 
         <!-- イチオシメニュー -->
         <div class="form-group">
-          <label for="recommendMenu">イチオシメニュー <span class="required">*</span></label>
+          <label for="recommendMenu" id="recommendMenuLabel">イチオシメニュー <span class="required">*</span></label>
           <input
             type="text"
             id="recommendMenu"
@@ -117,7 +131,7 @@
 
         <!-- コメント -->
         <div class="form-group">
-          <label for="comment">コメント <span class="required">*</span></label>
+          <label for="comment" id="commentLabel">コメント <span class="required">*</span></label>
           <textarea
             id="comment"
             rows="4"
@@ -128,7 +142,7 @@
 
         <!-- 写真アップロード（任意） -->
         <div class="form-group">
-          <label for="photo">写真アップロード (任意)</label>
+          <label for="photo" id="photoLabel">写真アップロード (任意)</label>
           <input
             type="file"
             id="photo"
@@ -138,7 +152,7 @@
         </div>
 
         <!-- 送信ボタン -->
-        <button type="submit" class="btn-submit">投稿する</button>
+        <button type="submit" class="btn-submit" id="submitReviewButton">投稿する</button>
       </form>
     </section>
   </main>
