Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ホーム</title>
+    <title>My Best Gourmet</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <!-- ヘッダー -->
     <header class="site-header">
         <div class="container">
-            <h1 class="site-title">サイトタイトル</h1>
+            <h1 class="site-title">My Best Gourmet</h1>
             <nav class="navigation">
                 <ul>
                     <!-- 文字表示に戻す -->
@@ -47,15 +47,15 @@
             </div>
 
             <div id="detailAreaContainer" class="area-dropdown" style="display: none;">
-                <!-- 第2階層 -->
+                <!-- 第2階層: 地域 -->
                 <label for="regionSelect" id="regionLabel">地域を選択:</label>
                 <select id="regionSelect"></select>
 
-                <!-- 第3階層 -->
+                <!-- 第3階層: 詳細エリア -->
                 <label for="subRegionSelect" id="subRegionLabel">詳細エリアを選択:</label>
                 <select id="subRegionSelect" style="display: none;"></select>
 
-                <!-- ▼ 第4階層: 名物グルメ -->
+                <!-- 第4階層: 名物グルメ -->
                 <div id="gourmetContainer" style="display: none;">
                   <label for="gourmetSelect" id="gourmetLabel">名物グルメを選択:</label>
                   <select id="gourmetSelect">
