--- a/post.html
+++ b/post.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>レビュー投稿</title>
+  <title>My Best Gourmet</title>
   <link rel="stylesheet" href="style.css" />
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap"
@@ -19,10 +19,9 @@
   <!-- ヘッダー -->
   <header class="site-header">
     <div class="container">
-      <h1 class="site-title">サイトタイトル</h1>
+      <h1 class="site-title">My Best Gourmet</h1>
       <nav class="navigation">
         <ul>
-          <!-- 文字に戻す -->
           <li><a href="home.html" id="homeLink">ホーム</a></li>
           <li><a href="post.html" id="postLink">投稿</a></li>
           <li><a href="ranking.html" id="rankingLink">ランキング</a></li>
