--- a/ranking.html
+++ b/ranking.html
@@ -1,30 +1,59 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>プロトタイプ - ランキング</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Best Gourmet - ランキング</title>
+  <link rel="stylesheet" href="style.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap"
+    rel="stylesheet"
+  />
 </head>
 <body>
-    <header>
-        <h1>ランキング</h1>
-        <nav>
-            <ul>
-                <li><a href="home.html">ホーム</a></li>
-                <li><a href="post.html">投稿</a></li>
-                <li><a href="ranking.html">ランキング</a></li>
-                <li><a href="mypage.html">マイページ</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h2>ランキングページ</h2>
-        <div id="rankingData">ランキングデータを表示します。</div>
-    </main>
-    <footer>
-        <p><a href="#">お問い合わせ</a> | <a href="#">サイトについて</a></p>
-    </footer>
-    <script src="ranking.js"></script>
+  <!-- ヘッダー -->
+  <header class="site-header">
+    <div class="container">
+      <h1 class="site-title">My Best Gourmet</h1>
+      <nav class="navigation">
+        <ul>
+          <li><a href="home.html" id="homeLink">ホーム</a></li>
+          <li><a href="post.html" id="postLink">投稿</a></li>
+          <li><a href="ranking.html" id="rankingLink">ランキング</a></li>
+          <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
+        </ul>
+      </nav>
+      <!-- 言語切替セレクター -->
+      <select id="headerLanguageSelect">
+        <option value="ja">日本語</option>
+        <option value="en">English</option>
+      </select>
+    </div>
+  </header>
+
+  <!-- メイン -->
+  <main class="site-main">
+    <section class="ranking-section container">
+      <h2 class="page-title" id="rankingTitle">人気ランキング</h2>
+
+      <!-- Coming soon メッセージ -->
+      <div class="ranking-content" id="rankingContent">
+        <p id="rankingMessage">ただいま準備中です...</p>
+      </div>
+    </section>
+  </main>
+
+  <!-- フッター -->
+  <footer class="site-footer">
+    <div class="container">
+      <p>
+        <a href="#" id="contactLink">お問い合わせ</a> |
+        <a href="#" id="aboutLink">サイトについて</a>
+      </p>
+    </div>
+  </footer>
+
+  <!-- JSファイル -->
+  <script src="ranking.js"></script>
 </body>
 </html>
