Fix: Update homepage design and layout

--- a/ranking.html
+++ b/ranking.html
@@ -23,7 +23,6 @@
           <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
         </ul>
       </nav>
-      <!-- 言語切替セレクター -->
       <select id="headerLanguageSelect">
         <option value="ja">日本語</option>
         <option value="en">English</option>
@@ -34,11 +33,50 @@
   <!-- メイン -->
   <main class="site-main">
     <section class="ranking-section container">
-      <h2 class="page-title" id="rankingTitle">人気ランキング</h2>
+      <h2 class="page-title" id="rankingTitle">名物グルメランキング</h2>
+      
+      <!-- 4段階のUI -->
+      <div class="area-dropdown">
+        <!-- エリア -->
+        <div class="dropdown-row">
+          <label for="areaSelect" id="rankingAreaLabel">エリアを選択:</label>
+          <select id="areaSelect">
+            <option value="" disabled selected>選択してください</option>
+            <option value="tokyo">東京</option>
+            <option value="osaka">大阪</option>
+            <option value="kyoto">京都</option>
+            <option value="hokkaido">北海道</option>
+            <option value="fukuoka">福岡</option>
+          </select>
+        </div>
 
-      <!-- Coming soon メッセージ -->
-      <div class="ranking-content" id="rankingContent">
-        <p id="rankingMessage">ただいま準備中です...</p>
+        <!-- 地域 -->
+        <div class="dropdown-row" id="regionContainer" style="display:none;">
+          <label for="regionSelect" id="rankingRegionLabel">地域を選択:</label>
+          <select id="regionSelect"></select>
+        </div>
+
+        <!-- 詳細エリア -->
+        <div class="dropdown-row" id="subRegionContainer" style="display:none;">
+          <label for="subRegionSelect" id="rankingSubRegionLabel">詳細エリアを選択:</label>
+          <select id="subRegionSelect" style="display:none;"></select>
+        </div>
+
+        <!-- 名物グルメ -->
+        <div class="dropdown-row" id="gourmetContainer" style="display:none;">
+          <label for="gourmetSelect" id="rankingGourmetLabel">名物グルメを選択:</label>
+          <select id="gourmetSelect">
+            <option value="" disabled selected>名物グルメを選択...</option>
+          </select>
+        </div>
+
+        <!-- 決定ボタン -->
+        <button id="btnShowRanking">決定</button>
+      </div>
+
+      <!-- モックのランキング表示 (将来的に実装) -->
+      <div id="rankingResult" style="margin-top:30px;">
+        <!-- 決定ボタン押下で alert() だけ出す(今はモック) -->
       </div>
     </section>
   </main>
@@ -46,14 +84,10 @@
   <!-- フッター -->
   <footer class="site-footer">
     <div class="container">
-      <p>
-        <a href="#" id="contactLink">お問い合わせ</a> |
-        <a href="#" id="aboutLink">サイトについて</a>
-      </p>
+      <p><a href="#" id="contactLink">お問い合わせ</a> | <a href="#" id="aboutLink">サイトについて</a></p>
     </div>
   </footer>
 
-  <!-- JSファイル -->
   <script src="ranking.js"></script>
 </body>
 </html>
