--- a/home.html
+++ b/home.html
@@ -1,97 +1,61 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Best Gourmet</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Best Gourmet</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- ヘッダー -->
-    <header class="site-header">
-        <div class="container">
-            <h1 class="site-title">My Best Gourmet</h1>
-            <nav class="navigation">
-                <ul>
-                    <li><a href="home.html" id="homeLink">ホーム</a></li>
-                    <li><a href="post.html" id="postLink">投稿</a></li>
-                    <li><a href="ranking.html" id="rankingLink">ランキング</a></li>
-                    <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
-                </ul>
-            </nav>
-            <!-- 言語切替セレクター -->
-            <select id="headerLanguageSelect">
-                <option value="ja">日本語</option>
-                <option value="en">English</option>
-            </select>
-        </div>
-    </header>
+  <!-- ヘッダー: 共通 -->
+  <header class="site-header">
+    <div class="container">
+      <h1 class="site-title">My Best Gourmet</h1>
+      <nav class="navigation">
+        <ul>
+          <li><a href="home.html" id="homeLink">ホーム</a></li>
+          <li><a href="post.html" id="postLink">投稿</a></li>
+          <li><a href="ranking.html" id="rankingLink">ランキング</a></li>
+          <li><a href="mypage.html" id="mypageLink">マイページ</a></li>
+        </ul>
+      </nav>
+      <!-- 言語切替セレクター -->
+      <select id="headerLanguageSelect">
+        <option value="ja">日本語</option>
+        <option value="en">English</option>
+      </select>
+    </div>
+  </header>
 
-    <!-- メインコンテンツ -->
-    <main class="site-main">
-        <!-- 観光客向け部分 -->
-        <section class="area-selection">
-            <h2 id="areaSelectionTitle">旅行先を選ぼう！</h2>
+  <!-- メインコンテンツ -->
+  <main class="site-main">
+    <!-- 投稿者向けボタン -->
+    <section class="review-post container">
+      <h2 id="homeTitle" style="text-align:center;">ようこそ</h2>
+      <div style="text-align:center; margin-top:30px;">
+        <a href="post.html" class="btn-review" id="goToPostButton">レビュー投稿はこちら</a>
+      </div>
+    </section>
 
-            <div class="area-dropdown">
-                <!-- ▼ 第1階層: エリア -->
-                <div class="dropdown-row">
-                  <label for="areaSelect" id="areaLabel">エリアを選択:</label>
-                  <select id="areaSelect">
-                    <option value="" disabled selected id="areaPlaceholder">エリアを選択...</option>
-                    <option value="tokyo">東京</option>
-                    <option value="osaka">大阪</option>
-                    <option value="kyoto">京都</option>
-                    <option value="hokkaido">北海道</option>
-                    <option value="fukuoka">福岡</option>
-                  </select>
-                </div>
+    <!-- 区切り線 -->
+    <div class="section-divider"></div>
 
-                <!-- ▼ detailAreaContainer全体をさらにdropdown-row風にまとめる -->
-                <div id="detailAreaContainer" style="display: none; flex-direction: column;">
-                  <!-- 第2階層: 地域 -->
-                  <div class="dropdown-row">
-                    <label for="regionSelect" id="regionLabel">地域を選択:</label>
-                    <select id="regionSelect"></select>
-                  </div>
+    <!-- ランキングページへの誘導 -->
+    <section class="go-ranking container" style="text-align:center; margin-top:30px;">
+      <a href="ranking.html" class="btn-review" id="goToRankingButton">名物グルメランキングはこちら</a>
+    </section>
 
-                  <!-- 第3階層: 詳細エリア -->
-                  <div class="dropdown-row">
-                    <label for="subRegionSelect" id="subRegionLabel">詳細エリアを選択:</label>
-                    <select id="subRegionSelect" style="display: none;"></select>
-                  </div>
+    <!-- 他にサイト説明や画像を入れるならここに -->
+  </main>
 
-                  <!-- 第4階層: 名物グルメ -->
-                  <div class="dropdown-row" id="gourmetContainer" style="display: none;">
-                    <label for="gourmetSelect" id="gourmetLabel">名物グルメを選択:</label>
-                    <select id="gourmetSelect">
-                      <option value="" disabled selected>名物グルメを選択...</option>
-                    </select>
-                  </div>
+  <!-- フッター -->
+  <footer class="site-footer">
+    <div class="container">
+      <p><a href="#" id="contactLink">お問い合わせ</a> | <a href="#" id="aboutLink">サイトについて</a></p>
+    </div>
+  </footer>
 
-                  <!-- 決定ボタン -->
-                  <button id="confirmAreaButton">決定</button>
-                </div>
-            </div>
-        </section>
-
-        <!-- 区切り線 -->
-        <div class="section-divider"></div>
-
-        <!-- 投稿者向け部分 -->
-        <section class="review-post">
-            <a href="post.html" class="btn-review" id="reviewPostButton">レビュー投稿ページはこちら</a>
-        </section>
-    </main>
-
-    <!-- フッター -->
-    <footer class="site-footer">
-        <div class="container">
-            <p><a href="#" id="contactLink">お問い合わせ</a> | <a href="#" id="aboutLink">サイトについて</a></p>
-        </div>
-    </footer>
-
-    <script src="home.js"></script>
+  <script src="home.js"></script>
 </body>
 </html>
