Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- ヘッダー: 共通 -->
+  <!-- ヘッダー -->
   <header class="site-header">
     <div class="container">
       <h1 class="site-title">My Best Gourmet</h1>
@@ -30,23 +30,17 @@
 
   <!-- メインコンテンツ -->
   <main class="site-main">
-    <!-- 投稿者向けボタン -->
-    <section class="review-post container">
-      <h2 id="homeTitle" style="text-align:center;">ようこそ</h2>
-      <div style="text-align:center; margin-top:30px;">
-        <a href="post.html" class="btn-review" id="goToPostButton">レビュー投稿はこちら</a>
-      </div>
+    <section class="review-post container" style="text-align:center;">
+      <h2 id="homeTitle" style="margin-bottom:30px;">ようこそ</h2>
+      <a href="post.html" class="btn-review" id="goToPostButton" style="display:inline-block;">レビュー投稿はこちら</a>
     </section>
 
     <!-- 区切り線 -->
     <div class="section-divider"></div>
 
-    <!-- ランキングページへの誘導 -->
     <section class="go-ranking container" style="text-align:center; margin-top:30px;">
       <a href="ranking.html" class="btn-review" id="goToRankingButton">名物グルメランキングはこちら</a>
     </section>
-
-    <!-- 他にサイト説明や画像を入れるならここに -->
   </main>
 
   <!-- フッター -->
