--- a/home.html
+++ b/home.html
@@ -32,21 +32,28 @@
   <main class="site-main">
     <section class="review-post container" style="text-align:center;">
       <h2 id="homeTitle" style="margin-bottom:30px;">ようこそ</h2>
-      <a href="post.html" class="btn-review" id="goToPostButton" style="display:inline-block;">レビュー投稿はこちら</a>
+      <!-- 1) 名物グルメランキングはこちら ボタン -->
+      <a href="ranking.html" class="btn-review" id="goToRankingButton" style="display:inline-block; margin-bottom:30px;">
+        名物グルメランキングはこちら
+      </a>
     </section>
 
     <!-- 区切り線 -->
     <div class="section-divider"></div>
 
-    <section class="go-ranking container" style="text-align:center; margin-top:30px;">
-      <a href="ranking.html" class="btn-review" id="goToRankingButton">名物グルメランキングはこちら</a>
+    <section class="go-post container" style="text-align:center; margin-top:30px;">
+      <!-- 2) レビュー投稿はこちら ボタン -->
+      <a href="post.html" class="btn-review" id="goToPostButton">レビュー投稿はこちら</a>
     </section>
   </main>
 
   <!-- フッター -->
   <footer class="site-footer">
     <div class="container">
-      <p><a href="#" id="contactLink">お問い合わせ</a> | <a href="#" id="aboutLink">サイトについて</a></p>
+      <p>
+        <a href="#" id="contactLink">お問い合わせ</a> |
+        <a href="#" id="aboutLink">サイトについて</a>
+      </p>
     </div>
   </footer>
 
