Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -42,8 +42,10 @@
     <div class="section-divider"></div>
 
     <section class="go-post container" style="text-align:center; margin-top:30px;">
-      <!-- 2) レビュー投稿はこちら ボタン -->
-      <a href="post.html" class="btn-review" id="goToPostButton">レビュー投稿はこちら</a>
+      <!-- 2) レビュー投稿はこちら ボタン (btn-review) -->
+      <a href="post.html" class="btn-review" id="goToPostButton">
+        レビュー投稿はこちら
+      </a>
     </section>
   </main>
 
