Fix: Update homepage design and layout

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 
     <section class="go-post container" style="text-align:center; margin-top:30px;">
       <!-- 2) レビュー投稿はこちら ボタン (btn-review) -->
-      <a href="post.html" class="btn-review" id="goToPostButton">
+      <a href="post.html" class="btn-review" id="goToPostButton"　style="display:inline-block; margin-bottom:30px;">
         レビュー投稿はこちら
       </a>
     </section>
