--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
     <section class="review-post container" style="text-align:center;">
       <h2 id="homeTitle" style="margin-bottom:30px;">ようこそ</h2>
       <!-- 1) 名物グルメランキングはこちら ボタン -->
-      <a href="ranking.html" class="btn-review" id="goToRankingButton" style="display:inline-block; margin-bottom:30px;">
+      <a href="ranking.html" class="btn-review" id="goToRankingButton"　style="display:inline-block; margin-bottom:30px;">
         名物グルメランキングはこちら
       </a>
     </section>
@@ -43,7 +43,7 @@
 
     <section class="go-post container" style="text-align:center; margin-top:30px;">
       <!-- 2) レビュー投稿はこちら ボタン (btn-review) -->
-      <a href="post.html" class="btn-review" id="goToPostButton"　style="display:inline-block; margin-bottom:30px;">
+      <a href="post.html" class="btn-review" id="goToPostButton">
         レビュー投稿はこちら
       </a>
     </section>
